--- a/index.html
+++ b/index.html
@@ -2,90 +2,154 @@
 <html lang="id">
 <head>
   <meta charset="UTF-8">
-  <title>Jasa Edit Canva by Yazid</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sejarah APRIS (Angkatan Perang Republik Indonesia Serikat)</title>
   <style>
-    @keyframes fade-in {
-      0% { opacity: 0; transform: translateY(-10px); }
-      100% { opacity: 1; transform: translateY(0); }
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.8;
+      margin: 0;
+      padding: 0;
+      background: #f4f6f8;
+      color: #333;
     }
-    .fade-in { animation: fade-in 1s ease-out forwards; }
+    header {
+      background: #1f3c88;
+      color: white;
+      text-align: center;
+      padding: 20px;
+    }
+    main {
+      max-width: 900px;
+      margin: 20px auto;
+      background: white;
+      padding: 25px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    }
+    h1, h2 {
+      color: #1f3c88;
+    }
+    h2 {
+      border-left: 5px solid #1f3c88;
+      padding-left: 10px;
+      margin-top: 25px;
+    }
+    ul {
+      margin: 10px 0;
+      padding-left: 20px;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin: 15px 0;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: left;
+    }
+    th {
+      background: #1f3c88;
+      color: white;
+    }
+    blockquote {
+      background: #f1f5fb;
+      border-left: 5px solid #1f3c88;
+      margin: 15px 0;
+      padding: 15px;
+      font-style: italic;
+    }
+    footer {
+      text-align: center;
+      padding: 15px;
+      background: #1f3c88;
+      color: white;
+      margin-top: 20px;
+    }
+    .emoji {
+      font-size: 1.2em;
+    }
   </style>
 </head>
-<body class="bg-gray-900 text-white min-h-screen font-sans p-4">
+<body>
+  <header>
+    <h1>🛡️ Sejarah APRIS (Angkatan Perang Republik Indonesia Serikat)</h1>
+  </header>
+  
+  <main>
+    <h2>📜 1. Latar Belakang Pembentukan APRIS</h2>
+    <p>Setelah Perang Kemerdekaan (1945–1949), Belanda dan Indonesia mengadakan Konferensi Meja Bundar (KMB) di Den Haag. Dalam perjanjian KMB (ditandatangani 2 November 1949), disepakati:</p>
+    <ul>
+      <li>Belanda mengakui kedaulatan Indonesia, tetapi Indonesia menjadi negara federal bernama Republik Indonesia Serikat (RIS).</li>
+      <li>RIS harus memiliki angkatan bersenjata resmi.</li>
+      <li>Dibentuklah APRIS sebagai angkatan perang tunggal RIS.</li>
+    </ul>
+    <p>📌 <b>APRIS</b> adalah gabungan:</p>
+    <ul>
+      <li>TNI (Tentara Nasional Indonesia) – tulang punggung militer Republik.</li>
+      <li>KNIL (Tentara kolonial Belanda) yang masih aktif.</li>
+      <li>Laskar rakyat dan tentara lokal.</li>
+    </ul>
 
-  <div class="max-w-xl mx-auto">
+    <h2>📆 2. Pembentukan Resmi APRIS</h2>
+    <p>📅 <b>27 Desember 1949</b>: RIS berdiri dan APRIS dibentuk sebagai bagian dari pengakuan kedaulatan.</p>
+    <p>📍 APRIS berada di bawah pemerintahan RIS untuk menjaga keamanan negara federal.</p>
 
-    <!-- Animasi Welcome -->
-    <div class="text-center mb-6">
-      <h1 class="text-4xl font-bold text-green-400 fade-in">Selamat Datang di Jasa Edit Canva</h1>
-      <p class="mt-2 text-gray-300 fade-in">Desain sesuai request kamu! Format PNG / JPG</p>
-    </div>
+    <h2>🪖 3. Struktur dan Susunan APRIS</h2>
+    <table>
+      <tr><th>Unsur</th><th>Keterangan</th></tr>
+      <tr><td>TNI</td><td>Komponen utama, militer Republik Indonesia</td></tr>
+      <tr><td>KNIL</td><td>Komponen minoritas, tentara kolonial Belanda</td></tr>
+      <tr><td>Laskar rakyat</td><td>Kelompok perjuangan bersenjata non-formal</td></tr>
+    </table>
+    <p>⚠️ Integrasi TNI dan KNIL menimbulkan gesekan karena perbedaan ideologi dan sejarah.</p>
 
-    <!-- Form Request -->
-    <form id="requestForm" class="bg-gray-800 p-6 rounded-xl shadow-md space-y-4">
-      <div>
-        <label class="block mb-1">Nama</label>
-        <input type="text" id="nama" required class="w-full p-2 rounded bg-gray-700 text-white">
-      </div>
-      <div>
-        <label class="block mb-1">Email</label>
-        <input type="email" id="email" required class="w-full p-2 rounded bg-gray-700 text-white">
-      </div>
-      <div>
-        <label class="block mb-1">Request Desain (tulis sedetail mungkin)</label>
-        <textarea id="request" required class="w-full p-2 rounded bg-gray-700 text-white" rows="4"></textarea>
-      </div>
-      <div>
-        <label class="block mb-1">Upload Referensi (opsional)</label>
-        <input type="file" id="file" class="w-full text-white">
-      </div>
-      <button type="submit" class="bg-green-500 hover:bg-green-600 px-4 py-2 rounded text-white font-bold w-full">Kirim Request</button>
-    </form>
+    <h2>🎯 4. Tujuan Pembentukan APRIS</h2>
+    <ul>
+      <li>Menjadi angkatan bersenjata resmi RIS.</li>
+      <li>Menyatukan kekuatan TNI, KNIL, dan laskar.</li>
+      <li>Mengawasi transisi keamanan pasca-kedaulatan.</li>
+      <li>Menstabilkan wilayah negara-negara bagian RIS.</li>
+    </ul>
 
-    <!-- Hasil & Nomor Pesanan -->
-    <div id="history" class="mt-8 space-y-4"></div>
+    <h2>⚔️ 5. Konflik pada Masa APRIS</h2>
+    <ul>
+      <li><b>APRA (Jan 1950):</b> Dipimpin Raymond Westerling, menyerang Bandung, anti-TNI.</li>
+      <li><b>Andi Azis (Apr 1950):</b> Di Makassar, eks-KNIL, menolak NKRI.</li>
+      <li><b>RMS (Mei 1950):</b> Dideklarasikan di Ambon, menolak integrasi Maluku.</li>
+    </ul>
 
-    <!-- Tombol WhatsApp Manual -->
-    <div class="mt-10 text-center">
-      <a href="https://wa.me/qr/STOOJ3DCJCE3A1" target="_blank" class="bg-blue-500 hover:bg-blue-600 px-6 py-2 rounded text-white font-semibold">Hubungi Manual via WhatsApp</a>
-    </div>
-  </div>
+    <h2>💣 6. Kegagalan Integrasi APRIS</h2>
+    <p>Integrasi gagal karena:</p>
+    <ul>
+      <li>TNI nasionalis pro-NKRI vs KNIL pro-Belanda.</li>
+      <li>Banyak kelompok bersenjata tak mau tunduk.</li>
+    </ul>
 
-  <script>
-    const form = document.getElementById('requestForm');
-    const history = document.getElementById('history');
+    <h2>🇮🇩 7. Pembubaran RIS & APRIS → Lahirnya APRI</h2>
+    <p>📅 <b>17 Agustus 1950</b>: RIS dibubarkan, NKRI ditegakkan. APRIS berubah menjadi <b>APRI</b> dengan TNI sebagai inti.</p>
+    <p>🔁 APRI menjadi cikal bakal <b>TNI modern</b>.</p>
 
-    form.addEventListener('submit', function(e) {
-      e.preventDefault();
+    <h2>📌 Ringkasan Sejarah APRIS</h2>
+    <table>
+      <tr><th>Aspek</th><th>Penjelasan</th></tr>
+      <tr><td>Nama</td><td>APRIS (Angkatan Perang Republik Indonesia Serikat)</td></tr>
+      <tr><td>Dibentuk</td><td>27 Desember 1949</td></tr>
+      <tr><td>Komponen</td><td>TNI, KNIL, Laskar Rakyat</td></tr>
+      <tr><td>Konflik besar</td><td>APRA, Andi Azis, RMS</td></tr>
+      <tr><td>Dibubarkan</td><td>17 Agustus 1950</td></tr>
+      <tr><td>Pengganti</td><td>APRI → TNI modern</td></tr>
+    </table>
 
-      const nama = document.getElementById('nama').value.trim();
-      const email = document.getElementById('email').value.trim();
-      const request = document.getElementById('request').value.trim();
-      const nomor = "REQ" + Date.now().toString().slice(-6); // contoh: REQ456123
-
-      // Tambah ke histori di layar
-      const orderHTML = `
-        <div class="bg-gray-700 p-4 rounded-lg shadow fade-in">
-          <h2 class="text-lg font-bold text-green-300">✅ Pesanan Terkirim</h2>
-          <p><strong>Nomor:</strong> ${nomor}</p>
-          <p><strong>Nama:</strong> ${nama}</p>
-          <p><strong>Email:</strong> ${email}</p>
-          <p><strong>Request:</strong> ${request}</p>
-        </div>
-      `;
-      history.innerHTML = orderHTML + history.innerHTML;
-
-      // Buat pesan WhatsApp
-      const pesan = `Halo! Saya ingin melakukan request desain Canva.%0A%0A*Nomor Pesanan:* ${nomor}%0A*Nama:* ${nama}%0A*Email:* ${email}%0A*Deskripsi Request:* ${encodeURIComponent(request)}%0A`;
-
-      // Kirim ke WhatsApp
-      const linkWA = `https://wa.me/qr/STOOJ3DCJCE3A1?text=${pesan}`;
-      window.open(linkWA, '_blank');
-
-      // Reset form
-      form.reset();
-    });
-  </script>
+    <h2>📚 Penutup</h2>
+    <blockquote>
+      APRIS adalah upaya awal Indonesia membangun militer nasional yang bersatu, namun gagal akibat konflik internal. Pembubarannya menandai lahirnya NKRI dan TNI modern.
+    </blockquote>
+  </main>
+  
+  <footer>
+    &copy; 2025 Sejarah Indonesia | Disusun untuk pembelajaran.
+  </footer>
 </body>
-                                               </html>
+</html>
